added skeleton responsive boilerplate

--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <title>Swahili Ipsum</title>
-  <link rel="stylesheet" href="./style/style.css">
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Your page title here :)</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
   <script src="./scripts/sw.js"></script>
   <script src="./scripts/generator.js"></script>
-</head>
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="./style/normalize.css">
+  <link rel="stylesheet" href="./style/skeleton.css">
+  <link rel="stylesheet" href="./style/style.css">
 
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/logo.svg">
+
+</head>
 <body>
+
   <header class="centered-grid">
     <img alt="Swahili Ipsum's logo" src="images/logo.svg" width="350" height="350"> 
   </header>
@@ -49,5 +70,4 @@
     })
     </script>
 </body>
-
 </html>
