added github link and improved SEO with extra meta tags

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
   <title>Swahili Ipsum</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="google-site-verification" content="fCVJZmWLJj4_CJslYOulWhVx7xuiZpUUOujRi77Zd8I" />
+  <meta name="description" content="A 'lorem ipsum' type text generator that generates Swahili words">
+  <meta name="author" content="Bichwaa (Newton Musyani)">
+
+  <meta property="og:title" content="Swahili Ipsum" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://bichwaa.github.io/swahili-ipsum/" />
+<meta property="og:image" content="images/logo.svg" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -28,18 +34,28 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/logo.svg">
+  <link rel="icon" type="image/png"  href="images/logo.svg">
 
 </head>
 <body>
+  <nav>
+      <a href="#">
+        <img src="./images/icons8-github.svg" width="50px" height="50px" alt="github icon">
+        <span>GITHUB</span>
+      </a>
+  </nav>
 
   <header class="centered-grid">
     <img alt="Swahili Ipsum's logo" src="images/logo.svg" width="350" height="350"> 
+
+    <p>
+      Its like a Lorem Ipsum generator. But much cooler because it spews out Swahili words.
+    </p>
   </header>
   <section class="scaffold"></section>
   <div class="form-container centered-grid">
     <form id="form" class="centered-grid" action="#" method="POST"> 
-      <label for="words">How many words?</label>
+      <label for="words">How many words do you need?</label>
       <br>
       <input id="form-amount"  type="number" name="words" value="500">
       <br>
